--- a/app/src/main/res/layout/fragment_about_us.xml
+++ b/app/src/main/res/layout/fragment_about_us.xml
@@ -183,12 +183,34 @@
 
             <TextView
                 android:id="@+id/profile_selected_currency_tv"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:textAlignment="textEnd"
                 android:textStyle="bold"
                 android:text="INR"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/profile_settings_no_of_coins_ll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="16dp"
+            android:clickable="true"
+            android:background="?attr/selectableItemBackground">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="No Of Currencies to Display"/>
+
+            <TextView
+                android:id="@+id/profile_selected_no_of_coins_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAlignment="textEnd"
+                android:textStyle="bold"
+                android:text="100"/>
         </LinearLayout>
 
         <View
