CT-2: Added Night Mode

--- a/app/src/main/res/layout/activity_add_alert.xml
+++ b/app/src/main/res/layout/activity_add_alert.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.localli.deepak.cryptotips.portfolio.AddPortfolio">
+    tools:context="com.localli.deepak.cryptotips.portfolio.AddPortfolioActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_add_alert"
@@ -80,7 +80,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="8dp"
                     android:textStyle="bold"
-                    android:textColor="@color/color_black"
+                    android:textColor="?android:attr/textColorPrimary"
                     android:hint="Select Coin"/>
 
 
@@ -175,7 +175,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="18sp"
-                    android:textColor="@color/black"
+                    android:textColor="?android:attr/textColorPrimary"
                     android:text="%"/>
 
             </LinearLayout>
@@ -232,7 +232,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="%"
-                    android:textColor="@color/black"
+                    android:textColor="?android:attr/textColorPrimary"
                     android:textSize="18sp" />
 
             </LinearLayout>
