--- a/app/src/main/res/layout/activity_add_portfolio.xml
+++ b/app/src/main/res/layout/activity_add_portfolio.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.localli.deepak.cryptotips.portfolio.AddPortfolio">
+    tools:context="com.localli.deepak.cryptotips.portfolio.AddPortfolioActivity">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_add_portfolio"
@@ -78,7 +78,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="8dp"
                     android:textStyle="bold"
-                    android:textColor="@color/color_black"
+                    android:textColor="?android:attr/textColorPrimary"
                     android:hint="Select Coin"/>
 
 
