--- a/app/src/main/res/layout/item_coin.xml
+++ b/app/src/main/res/layout/item_coin.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
 
-    <androidx.cardview.widget.CardView
+    <!--<androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="10dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
         android:layout_marginTop="4dp"
-        android:layout_marginBottom="4dp">
+        android:layout_marginBottom="4dp">-->
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -35,14 +36,16 @@
                         android:id="@+id/item_coin_iv"
                         android:layout_width="30dp"
                         android:layout_height="30dp"
-                        android:layout_margin="8dp"
+                        android:layout_marginRight="8dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginLeft="8dp"
                         android:src="@drawable/ninja_cat"
                         android:scaleType="centerCrop"/>
                     <TextView
                         android:id="@+id/item_coin_name_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="#000000"
+                        android:textColor="?android:attr/textColorPrimary"
                         android:layout_gravity="center_vertical"
                         android:text="Bitcoin (BTC)"
                         android:textSize="@dimen/dimen_body"/>
@@ -61,17 +64,17 @@
                             android:id="@+id/item_coin_fav_border_iv"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:padding="10dp"
+                            android:padding="8dp"
                             android:layout_centerInParent="true"
-                            android:src="@mipmap/ic_fav_border" />
+                            app:srcCompat="@drawable/ic_favorite_border" />
 
                         <ImageView
                             android:id="@+id/item_coin_fav_filled_iv"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:padding="10dp"
+                            android:padding="8dp"
                             android:layout_centerInParent="true"
-                            android:src="@mipmap/ic_favorite_filled"
+                            app:srcCompat="@drawable/ic_fav_filled_daynight"
                             android:visibility="gone"/>
                     </RelativeLayout>
 
@@ -189,7 +192,7 @@
 
         </RelativeLayout>
 
-    </androidx.cardview.widget.CardView>
+    <!--</androidx.cardview.widget.CardView>-->
 
 
 
