--- a/app/src/main/res/layout/item_portfolio.xml
+++ b/app/src/main/res/layout/item_portfolio.xml
@@ -69,7 +69,7 @@
                                 android:id="@+id/item_coin_name_tv"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textColor="#000000"
+                                android:textColor="?android:attr/textColorPrimary"
                                 android:layout_gravity="center_vertical"
                                 android:text="Bitcoin (BTC)"
                                 android:textSize="@dimen/dimen_body"/>
