--- a/app/src/main/res/layout/row_news.xml
+++ b/app/src/main/res/layout/row_news.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
+    <!--<androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:elevation="3dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="4dp">
+        android:layout_marginBottom="4dp">-->
 
 
         <RelativeLayout
@@ -35,7 +35,7 @@
                 android:layout_toRightOf="@+id/row_news_meta_image"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
-                android:textColor="@color/color_black"
+                android:textColor="?android:attr/textColorPrimary"
                 android:textSize="16sp"
                 android:fontFamily="sans-serif"/>
 
@@ -70,6 +70,6 @@
             </LinearLayout>
         </RelativeLayout>
 
-    </androidx.cardview.widget.CardView>
+    <!--</androidx.cardview.widget.CardView>-->
 
 </LinearLayout>
