--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,8 +10,8 @@
     <color name="color_grey">#d6d6d6</color>
     <color name="color_red">#ff0000</color>
     <color name="color_green">#2e7d32</color>
-    <color name="color_blue">#2a4aff</color>
+    <color name="color_blue">#6E80F0</color>
 
-    <color name="bg_row_background">#fa315b</color>
+    <color name="bg_row_background">#B92442</color>
     <color name="color_white">#ffffff</color>
 </resources>
